# aura-mvi

./: .gitignore  Cargo.toml  docker-compose.yml
dashboard/: Dockerfile  app.py
edge-agent/: Cargo.toml  Dockerfile
edge-agent/src/: main.rs
signal-api/: Dockerfile  main.py
simulator/: Dockerfile  main.py
